--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,15 +4,13 @@
     // Pour plus d'informations, visitez : https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+      {
+        "command": "ng serve --open",
+        "name": "ng serve",
+        "request": "launch",
+        "type": "node-terminal"
+      },
 
 
-        {
-            "type": "chrome",
-            "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:4200",
-            
-
-        }
     ]
 }
