--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"cSpell.language": "fr-FR,en",
+	"editor.detectIndentation": false,
+	"editor.tabSize": 1
 }
