--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,9 +4,13 @@
     // Pour plus d'informations, visitez : https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-
-
+      {
+        "name": "Launch Chrome",
+        "request": "launch",
+        "type": "pwa-chrome",
+        "url": "http://localhost:4200",
+        "webRoot": "${workspaceFolder}"
+      },
 
 
       {
