--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,16 +1,23 @@
 {
 	"version": "2.0.0",
 	"tasks": [
-		{
-			"type": "npm",
-			"script": "ng build",
-			"group": {
-				"kind": "build",
-				"isDefault": true
-			},
-			"problemMatcher": [],
-			"label": "npm: build",
-			"detail": "ng build"
-		}
-	]
+    {
+      "type": "npm",
+      "script": "ng serve",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": [],
+      "label": "npm: build",
+      "detail": "ng build"
+    },
+    {
+      "type": "npm",
+      "script": "start",
+      "problemMatcher": [],
+      "label": "ng serve",
+      "detail": "ng serve"
+    }
+  ]
 }
